# RBE594-Eyetracked-Manipulator

./: README.md  system-loop.py
eyetracking-options/EyeTracker/: OrloskyPupilDetectorRaspberryPi.py  gaze_vector.txt
eyetracking-options/EyeTracker/3DTracker/: Orlosky3DEyeTracker.py
eyetracking-options/EyeTracker/Webcam3DTracker/: MonitorTracking.py
eyetracking-options/EyeTrax/: .gitignore
eyetracking-options/_EyeTracker/FrontCameraTracker/: Orlosky3DEyeTrackerFrontCamera.py
eyetracking-options/_EyeTracker/Webcam3DTracker/: screen_position.txt
simulation/open_manipulator/EyeTrax/src/eyetrax/: gaze.py
simulation/open_manipulator/EyeTrax/src/eyetrax/app/: demo.py
simulation/open_manipulator/docker/: Dockerfile  container.sh  docker-compose.yml
simulation/open_manipulator/eyetracking_controller/: setup.cfg  setup.py
simulation/open_manipulator/eyetracking_controller/eyetracking_controller/: eyetracking_control.py  inverse_kinematics.py
simulation/open_manipulator/install/: local_setup.sh  setup.sh
simulation/open_manipulator/install/eyetracking_controller/share/eyetracking_controller/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
simulation/open_manipulator/log/: latest_build
simulation/open_manipulator/open_manipulator_bringup/: setup.py
simulation/open_manipulator/open_manipulator_bringup/worlds/: empty_world.sdf  laptop_camera.stl  table.stl  wheelchair.stl
simulation/open_manipulator/open_manipulator_description/urdf/open_manipulator_x/: open_manipulator_x_arm.urdf.xacro
(+42 files in other folders)
