<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>eyetracking_controller</name>
  <version>0.0.0</version>
  <description>Eyetracking controller for OpenManipulator-X</description>
  <maintainer email="jarothenberg@wpi.edu">Jack Rothenberg</maintainer>
  <license>Apache-2.0</license>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
